# fda-calendar-scraper

./: .gitignore  Cargo.toml
src/: Currency.rs  fda_scraper.rs  html_render.rs  lib.rs
templates/: hello.html  scraped_catalysts_email_body.html
test-resources/fda_calendar_sample_files/: fda_calendar_download.html  fda_calendar_malformed_date.html  fda_calendar_malformed_price.html  fda_calendar_multiple_rows.html  fda_calendar_sample.html
